# nus

./: .env.example  .gitignore  README.md  RESUME.md  index.html  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: daily-digest.yml
config/: feeds.json
docs/: index.html
prompts/: categorization.md
src/nus/: __init__.py  analyzer.py  analyzers.py  base_analyzer.py  config.py  container.py  exceptions.py  fetcher.py  main.py  models.py  orchestrator.py  renderer.py
templates/: digest.html
