[project]
name = "nus"
version = "0.1.0"
description = "AI-powered daily news curator"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "feedparser>=6.0.11",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
]

[project.scripts]
generate-digest = "nus.main:main"
test-local = "nus.main:test_local"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
